# motion-control-precision-force

./: .gitignore  CONSTITUTION.md  GETTING_STARTED.md  LICENSE  PRE_IMPLEMENTATION_REPORT.md  README.md  ROADMAP.md  demo_ai_scope.py  demo_multi_axis.py  multi-axis-architecture.md  requirements.txt  run_scope.py
.claude/: scheduled_tasks.json
01-market-research/: competitive-analysis.md  feasibility-report.md  gap-analysis.md  market-sizing.md  pro-free-gap-analysis.md
02-architecture/: ethercat-axis-limit.md  ethercat-device-taxonomy.md  sim-discover-mode.md  technology-stack.md
03-ethercat-master/: README.md
05-servo-params/: brand_loader.py  brands.json  extract_esi_generic.py  generate_scope_configs.py
06-ai-analyzer/: README.md  pyproject.toml  servo_cli.py
06-ai-analyzer/ai_analyzer/: __init__.py  action_logger.py  ai_annotator.py  analyzer_base.py  analyzer_bridge.py  analyzer_pipeline.py  cli.py  cli_aliases.py  cli_commands.py  cli_llm_bridge.py  codegen_st.py  config.py  cross_axis.py  current_anomaly.py  engineer_prompts.py  hitl_gate.py  hitl_types.py  llm_refiner.py  mechanical_resonance.py  parameter_recommender.py  tracking_error.py  tuning_rules.py
06-ai-analyzer/models/: README.md
06-ai-analyzer/tests/: test_action_logger.py  test_ai_annotator.py  test_codegen_st.py  test_cross_axis.py  test_current_anomaly.py  test_hitl_gate.py  test_llm_refiner.py  test_mechanical_resonance.py  test_parameter_recommender.py  test_servo_cli.py  test_tracking_error.py
07-codesys-fb/: DUT_ServoAI_Params.st  DUT_ServoDiag.st  FB_ForceControl.st  README.md  (+4 more)
(+91 files in other folders)
