[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "servo-cli"
version = "1.1.0"
description = "Servo Diagnostic CLI — 离线命令系统 + AI 诊断"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
]

[project.scripts]
servo = "ai_analyzer.cli:main"

[project.optional-dependencies]
web = ["aiohttp>=3.9"]
qt = ["PySide6>=6.5", "pyqtgraph>=0.13"]

[tool.setuptools]
packages = ["ai_analyzer"]
